--- a/index.html
+++ b/index.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de filmes</title>
-    <link rel = "stylesheet" href = "style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
     <header> Filmes </header>
-<div>
-    <h1>Listas de Filmes</h1>
+    <section>
+        <div>
+            <h1>Listas de Filmes</h1>
 
-    <p>Aventura</p>
-</div>
+            <p>Aventura</p>
+        </div>
 
-<div>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/HIbwgbbJzSs?si=9-0Bg8o5QeHrA5If" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</div>
-
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/HIbwgbbJzSs?si=9-0Bg8o5QeHrA5If"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
 </body>
+
 </html>
