--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
+
+    <section class="Categoria">
+    <h2>Filmes e séries</h2>
+    <div class="Categoria-videos">
+        <a href="https://www.youtube.com/watch?v=8cfMJ8PemU8">
+        <img
+
+</a>
+    </div>
+    </section>
 </body>
 
 </html>
