adicionamos mais filmes na lista

--- a/index.html
+++ b/index.html
@@ -31,8 +31,20 @@
     <section class="Categoria">
     <h2>Filmes e séries</h2>
     <div class="Categoria-videos">
-        <a href="https://www.youtube.com/watch?v=8cfMJ8PemU8">
-        <img
+        <!--Avatar: Fogo e Cinzas-->
+        <a href="https://www.youtube.com/watch?v=yXPWsdT43YE">
+            <img src="https://img.youtube.com/vi/yXPWsdT43YE/maxresdefault.jpg" alt="">
+        </a>
+
+        <!--ENTRE MONTANHAS-->
+        <a href="https://www.youtube.com/watch?v=p74Lk8DvbHA">
+            <img src="im/imagem/montanhas.png" alt="">
+        </a>
+
+    <!--anaconda 5-->
+        <a href="https://www.youtube.com/watch?v=M_ts2Sipy1o">
+            <img src="im/imagem/anaconda.png" alt="">
+        </a>
 
 </a>
     </div>
